--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="icon" href="images/Logo.png" sizes="32x32" type="images/png">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -23,8 +23,26 @@
                     <img class="logo" src="images/piggyvest.png" alt="" width="201" height="55">
                 </a>
                 <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="#">Save</a>
+                    <li id="save" class="nav-item">
+                        <a href="#savesection">Save</a>
+                        <div class="dropmenu"><ul class="save-hover-menu">
+                            <li class="save-hover-item"><a href="#" >
+                                <img src="images/piggy.png" alt="piggy" width="25" height="25">
+                                <p>Piggybank</p>
+                            </a></li>
+                            <li class="save-hover-item"><a href="#">
+                                <img src="images/safelock.png" alt="piggy" width="25" height="25">
+                                <p>Safelock</p>
+                            </a></li>
+                            <li class="save-hover-item"><a href="#" >
+                                    <img src="images/target.png" alt="piggy" width="25" height="25">
+                                    <p>Target Saving</p>
+                                </a></li>
+                            <li class="save-hover-item"><a href="#" >
+                                <img src="images/flex.png" alt="piggy" width="25" height="25">
+                                <p>Flex Naira</p>
+                                </a></li>
+                        </ul></div>
                     </li>
                     <li class="nav-item">
                         <a href="#">Invest</a>
@@ -56,7 +74,6 @@
               </div>
         </div>
     </header>
-<br>
     <main>
         <div class="row1">
             <div class="row1-col1">
@@ -66,20 +83,21 @@
                 <div class="btns">
                     <button class="btn1"><a href="https://apps.apple.com/ng/app/piggyvest/id1263117994">
                         <div class="btn-group">
-                            <img src="images/apple-logo.png" alt="downlad-apple" height="27" width="20">
-                            <p>Get on iPhone</p>
+                            <img style="margin: 0 0 0 12px;" src="images/apple-logo.png" alt="downlad-apple" height="27" width="20">
+                            <p style="padding: 0 0 1px 10px;">Get on iPhone</p>
                         </div>
                     </a></button>
                     
                     <button class="btn1"><a href="https://play.google.com/store/apps/details?id=com.piggybankng.piggy">
                         <div class="btn-group">
-                            <img src="images/playstore-logo.png" alt="downlad-apple" height="27" width="24">
-                            <p>Get on Android</p>
+                            <img style="margin: 0 0 0 12px;" src="images/playstore-logo.png" alt="downlad-apple" height="27" width="24">
+                            <p style="padding: 0 0 1px 10px;">Get on Android</p>
                         </div>
                     </a></button>
                 </div>
             </div> 
             <div class="row1-col2">
+                <div>
                 <div id="rect"></div> 
                 <img id="img1" src="images/rect.png" alt="">
                 <img id="img2" src="images/lady.png" alt="lady">
@@ -104,11 +122,12 @@
                     <i id="c-9" class="fa-solid fa-circle"></i>
                     <i id="c-10" class="fa-solid fa-circle"></i>
                 </div>
+                </div>
             </div>
         </div>
     </main>
 
-    <section>
+    <section class="a">
         <div class="row2">
             <div class="row2-col1">
                 <img id="security" src="images/security.png" alt="" width="95" height="110">
@@ -123,14 +142,14 @@
         </div>
     </section>
 
-    <section>
+    <section class="b">
         <div class="row3">
             <div class="row3-col1">
                 <h1>4 ways to build your savings</h1>
                 <p>Earn 5%-15% when you save with any of these PiggyVest plans.</p>
                 <button class="btn2"><a href="register.html">Start Saving</a></button>
             </div>
-            <div class="row3-col2">
+            <div class="row3-col2" id="savesection">
                 <div class="row3-col2-row1">
                     <img src="images/piggy.png" alt="piggy" width="40" height="40">
                     <h1>Automated Savings</h1>
@@ -186,10 +205,10 @@
         </div>
     </section>
 
-    <section>
+    <section class="c">
         <div class="row4">
             <div class="row4-col1">
-                <img src="images/invest.png" alt="imvest" width="263" height="563">
+                <img style="margin-bottom: 80px;" src="images/invest.png" alt="imvest" width="263" height="563">
                 <i id="circle-" class="fa-solid fa-circle-dot"></i>
                 <div>
                     <i id="c--1" class="fa-solid fa-circle"></i>
@@ -230,7 +249,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="d">
         <div class="row6">
             <div class="row6-col1">
                 <div class="commentsection">
@@ -277,7 +296,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="e">
         <div class="footer">
             <a class="col" href="index.html" >
                 <img class="logo" src="images/piggyvest.png" alt="" width="201" height="55">
